[gd_scene load_steps=5 format=3 uid="uid://csxhxbuvjc8jy"]

[ext_resource type="FontFile" uid="uid://crllml678fbxx" path="res://fonts/BodoniflfBold-MVZx.ttf" id="1_ri0dl"]
[ext_resource type="Texture2D" uid="uid://dpy83je6hfgvk" path="res://art/VaporVariables.png" id="2_jbnum"]
[ext_resource type="PackedScene" uid="uid://bao5p4mg2f0px" path="res://upgrade_button.tscn" id="2_vmkgg"]
[ext_resource type="Script" path="res://clicker.gd" id="2_yguf0"]

[node name="Clicker" type="Button" groups=["Clickers"]]
offset_right = 108.0
offset_bottom = 108.0
scale = Vector2(1.3, 1.3)
theme_override_fonts/font = ExtResource("1_ri0dl")
icon = ExtResource("2_jbnum")
flat = true
script = ExtResource("2_yguf0")

[node name="UpgradeButton" parent="." instance=ExtResource("2_vmkgg")]
layout_mode = 1
anchors_preset = -1
offset_left = 123.636
offset_top = 80.0
offset_right = 277.636
offset_bottom = 134.0
theme_override_fonts/font = ExtResource("1_ri0dl")
text = "Buy x[Input Value]:
$[Input Value]"

[node name="MoneyPerClick" type="Label" parent="."]
layout_mode = 0
offset_left = 123.636
offset_top = 29.0909
offset_right = 310.636
offset_bottom = 65.0909
theme_override_fonts/font = ExtResource("1_ri0dl")
theme_override_font_sizes/font_size = 30
text = "$[Input Value]"

[node name="ClickerTimerDisplay" type="Label" parent="."]
layout_mode = 0
offset_left = 290.909
offset_top = 87.2727
offset_right = 377.909
offset_bottom = 118.273
theme_override_fonts/font = ExtResource("1_ri0dl")
theme_override_font_sizes/font_size = 20
text = "# second"

[node name="NumberOfUpgrades" type="Label" parent="."]
layout_mode = 0
offset_top = 123.636
offset_right = 121.0
offset_bottom = 149.636
theme_override_fonts/font = ExtResource("1_ri0dl")
text = "[Input Number]"

[node name="ClickerTimer" type="Timer" parent="."]

[node name="Node" type="Node" parent="."]
